--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -32,9 +32,9 @@
             </div>
           </div>
 
-          <!-- Change button color text-dark-->
+          <!-- Button Create article Change button color text-dark-->
           <div class="form-group-row-custom">
-            <%= fun.submit class: "btn-btn-outline-dark-btn-lg" %>
+            <%= fun.submit class: "btn-btn-outline-dark-btn-lg-custom" %>
           </div>
         <% end %>
         </div>
