--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,8 +1,11 @@
-<h1 class="text-center mt-4">Create a new article</h1>
+<div class="jumbotron" id="custom_jumbo">
 
-<%= render 'form', article: @article %>
+    <h4 class="text-center mt-4">Create a new article</h4>
 
-<!--Button go back-->
-<!--
-<button type="button" class="btn btn-outline-primary" style="alignment: left"> -->
-<!-- </button> -->
+    <%= render 'form', article: @article %>
+
+    <!--Button go back-->
+    <!--
+    <button type="button" class="btn btn-outline-primary" style="alignment: left"> -->
+    <!-- </button> -->
+</div>
