--- a/app/views/landingpage/index.html.erb
+++ b/app/views/landingpage/index.html.erb
@@ -4,13 +4,23 @@
   <title>Welcome to MediCare</title>
   <%= csrf_meta_tags %>
 
+  <br>
+  <br>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+  <br>
+  <!--Load the Weather Widget https://openweathermap.org/widgets-constructor  -->
+  <div id="openweathermap-widget-19"></div>
+  <script>window.myWidgetParam ? window.myWidgetParam : window.myWidgetParam = [];
+  window.myWidgetParam.push({id: 19,cityid: '2964574',appid: 'b8e3c67a47ab91792a2201ee53a799bd',units: 'metric',containerid: 'openweathermap-widget-19',  });
+  (function() {var script = document.createElement('script');script.async = true;script.charset = "utf-8";script.src = "//openweathermap.org/themes/openweathermap/assets/vendor/owm/js/weather-widget-generator.js";
+  var s = document.getElementsByTagName('script')[0];s.parentNode.insertBefore(script, s);  })();</script>
   <div class="jumbotron">
     <h1 class="display-4">MediCare!</h1>
 
   </div>
 
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+
 </head>
 
 <body>
