--- a/app/views/news/index.html.erb
+++ b/app/views/news/index.html.erb
@@ -1,8 +1,10 @@
 <div class="container">
 
   <div class="row">
-    <!-- Rendering in the newsApi response -->
-    <%= render "api/indexNewsApiHeadlines" %>
+    <!-- Rendering the newsApi -->
+    <%= render "api/indexNewsApiIreland" %>
+
+    <!--   render "landingpage/blog_sidebar" %> -->
 
   </div>
 
