--- a/app/views/profiles/create.html.erb
+++ b/app/views/profiles/create.html.erb
@@ -1,5 +1,5 @@
-<div class="jumbotron" id="signup_jumbo">
+<div class="jumbotron" id="custom_jumbo">
 
     <h1>Profiles#create</h1>
-    <p>Find me in app/views/profiles/create.html.erb</p>
+    <p></p>
 </div>
