--- a/app/views/appointments/_form.html.erb
+++ b/app/views/appointments/_form.html.erb
@@ -1,42 +1,23 @@
-<%= form_with(model: appointment) do |form| %>
-  <% if appointment.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(appointment.errors.count, "error") %> prohibited this appointment from being saved:</h2>
+<!--  Generated using Simple form gem -->
 
-      <ul>
-        <% appointment.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
+<%= simple_form_for(@appointment) do |f| %>
+  <%= f.error_notification %>
+  <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
 
-  <div class="field">
-    <%= form.label :date %>
-    <%= form.datetime_select :date %>
+  <div class="form-inputs">
+    <%= f.input :date %>
+    <%= f.input :comment  %>
+    <%= f.input :visited, :collection => %w[Yes No] %>
+    <%= f.input :patient, :collection => Patient.where(:user => current_user.id) %>
+    <!-- This syntax wont work anymore with Simple_form
+    %= f.input :patient, :name, Patient.all.order(:name,), :name, :name, {:include_blank => false}, {:class => 'form-control'} %>
+        -->
   </div>
 
-  <div class="field">
-    <%= form.label :comment %>
-    <%= form.text_area :comment %>
-  </div>
 
-  <div class="field">
-    <%= form.label :visited %>
-    <%= form.check_box :visited %>
-  </div>
-
-  <div class="field">
-    <%= form.label :user_id %>
-    <%= form.text_field :user_id %>
-  </div>
-
-  <div class="field">
-    <%= form.label :patient_id %>
-    <%= form.text_field :patient_id %>
-  </div>
-
-  <div class="actions">
-    <%= form.submit %>
+  <div style="display: flex; float: left;">
+    <%= f.button :submit , class: "btn btn-success btn-m" %>
   </div>
 <% end %>
+
+
