--- a/app/views/appointments/new.html.erb
+++ b/app/views/appointments/new.html.erb
@@ -1,5 +1,8 @@
-<h1>New Appointment</h1>
+<div class="jumbotron" id="custom_jumbo">
+  <h1>New Appointment</h1>
 
-<%= render 'form', appointment: @appointment %>
+    <%= render 'form', appointment: @appointment %>
 
-<%= link_to 'Back', appointments_path %>
+      <%= link_to 'Back', appointments_path ,class: "btn btn-primary btn-m" %>
+
+</div>
