--- a/app/views/appointments/show.html.erb
+++ b/app/views/appointments/show.html.erb
@@ -14,16 +14,15 @@
   <strong>Visited:</strong>
   <%= @appointment.visited %>
 </p>
-
 <p>
-  <strong>User:</strong>
-  <%= @appointment.user_id %>
+  <strong>Doctor:</strong>
+  <%= @appointment.user.profile %>
 </p>
 
 <p>
   <strong>Patient:</strong>
-  <%= @appointment.patient_id %>
+  <%= @appointment.patient %>
 </p>
 
-<%= link_to 'Edit', edit_appointment_path(@appointment) %> |
-<%= link_to 'Back', appointments_path %>
+<%= link_to 'Edit', edit_appointment_path(@appointment) , class: "btn btn-outline-info" %>
+<%= link_to 'Back', appointments_path ,class: "btn btn-primary btn-m" %>
