--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,3 +1,4 @@
+<br>
 <h2 class="text-center mt-4"><%= @article.title %></h2>
 
 <div class="container">
@@ -15,7 +16,7 @@
           <% @article.user == current_user || current_user.admin? %>
             <%= link_to "Edit", edit_article_path(@article), class: "btn btn-outline-info" %>
             <%= link_to "Delete", article_path(@article), class: "btn btn-outline-danger", method: :delete, data: {confirm: "Are you sure?"} %>
-          <%= link_to "View All Article", articles_path, class: "btn btn-xs btn-success" %>
+            <%= link_to "View All Article", articles_path, class: "btn btn-xs btn-success" %>
 
 
         </div>
@@ -26,9 +27,66 @@
             edited <%= time_ago_in_words(@article.updated_at) %> ago</small>
         </div>
 
+
+        <h5 class="center"><strong>Comments: </strong></h5>
+
+
+        <!-- View for article comments -->
+        <% @article.comments.each do |comment| %>
+          <div class="card">
+            <div class="card-block">
+              <h5 class="card-text"> Commented By: <%= comment.user.email %> </h5>
+
+
+              <!-- Only display Edit, Delete for users -->
+              <% if current_user %>
+
+                <button type="button" class="btn btn-outline-primary" style="alignment: right">
+                  <%= link_to 'Edit', edit_article_comment_path(@article, comment) %>
+                </button>
+
+                <button type="button" class="btn btn-outline-primary" style="alignment: right">
+                  <%= link_to 'Delete', article_comment_path(@article, comment), data: { confirm: 'Are you sure?' } , :method => :delete %>
+                </button>
+
+              <%end %>
+
+
+
+
+            </div>
+          </div>
+
+          <br>
+
+        <% end %>
+
+
       </div>
+      <!-- Display the "show comments" button for users and Admin -->
+      <% if current_user || current_user.admin%>
+        <!--<button type="button" class= "block" > -->
+          <button type="button" class="btn btn-outline-primary" style="alignment: left">
+          <%= link_to 'Show Comments', article_comments_path(@article) %>
+
+        </button>
+      <%end %>
+
+      <!-- Display the "new comments" button for users -->
+      <% if current_user %>
+        <button type="button" class="btn btn-outline-primary" style="alignment: left">
+          <%= link_to 'Add New Comment', new_article_comment_path(@article) %>
+        </button>
+      <%end %>
     </div>
   </div>
+
+
+
+
+
+
+
 </div>
 
 
