--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,37 +1,26 @@
-<%= form_with(model: comment) do |form| %>
-  <% if comment.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(comment.errors.count, "error") %> prohibited this comment from being saved:</h2>
 
+<!-- Form used in the new and edit pages -->
+<%= form_for([@article, @comment]) do |f| %>
+  <% if @comment.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(@comment.errors.count, "error")%>
+        prohibited this comment from being saved:</h2>
       <ul>
-        <% comment.errors.each do |error| %>
-          <li><%= error.full_message %></li>
+        <% @comment.errors.full_messages.each do |msg| %>
+          <li><%= msg %></li>
         <% end %>
       </ul>
     </div>
   <% end %>
 
   <div class="field">
-    <%= form.label :content %>
-    <%= form.text_field :content %>
-  </div>
-
-  <div class="field">
-    <%= form.label :created_by %>
-    <%= form.text_field :created_by %>
-  </div>
-
-  <div class="field">
-    <%= form.label :article_id %>
-    <%= form.text_field :article_id %>
-  </div>
-
-  <div class="field">
-    <%= form.label :user_id %>
-    <%= form.text_field :user_id %>
+    <p>
+      <%= f.text_field :content, class: "form-control"  %>
+    </p>
   </div>
 
   <div class="actions">
-    <%= form.submit %>
+    <%= f.submit "Create Comment", class: "btn btn-primary" %>
   </div>
+
 <% end %>
