--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -1,33 +1,44 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Comments</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Content</th>
-      <th>Created by</th>
-      <th>Article</th>
-      <th>User</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @comments.each do |comment| %>
-      <tr>
-        <td><%= comment.content %></td>
-        <td><%= comment.created_by %></td>
-        <td><%= comment.article_id %></td>
-        <td><%= comment.user_id %></td>
-        <td><%= link_to 'Show', comment %></td>
-        <td><%= link_to 'Edit', edit_comment_path(comment) %></td>
-        <td><%= link_to 'Destroy', comment, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
 <br>
 
-<%= link_to 'New Comment', new_comment_path %>
+<h1>Comments in Article: <%= (@article.title) %></h1>
+
+<!-- View article comments  -->
+<% for comment in @comments %>
+  <div class="card">
+    <div class="card-block">
+      <p class="card-text"> Commented By: <%= comment.user.email %> </p>
+      <p class="card-text"> <%= (comment.content) %></p>
+
+
+      <br>
+
+      <!-- display, Show Edit, Delete for User who wrote the comment -->
+      <% if current_user %>
+
+        <button type="button" class="btn btn-outline-primary">
+          <%= link_to 'Show', article_comment_path(@article, comment)%>
+        </button>
+
+        <button type="button" class="btn btn-outline-primary" style="alignment: right">
+          <%= link_to 'Edit', edit_article_comment_path(@article, comment) %>
+        </button>
+
+        <button type="button" class="btn btn-outline-primary" style="alignment: right">
+          <%= link_to 'Delete', article_comment_path(@article, comment), data: { confirm: 'Are you sure?' } , :method => :delete %>
+        </button>
+
+      <% end %>
+
+    </div>
+  </div>
+
+<% end %>
+
+<!-- If is not the Author of the comments Display Back button -->
+<% if current_user || current_user.admin%>
+
+  <button type="button" class="btn btn-outline-primary" style="alignment: right">
+    <%= link_to 'Back', article_path(@article) %>
+  </button>
+
+<%end %>
