--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -1,5 +1,9 @@
+<br>
 <h1>New Comment</h1>
 
 <%= render 'form', comment: @comment %>
 
-<%= link_to 'Back', comments_path %>
+<!--  %= link_to 'Back', article_comments_path %>  -->
+<button type="button" class="btn btn-outline-primary" style="alignment: right">
+  <%= link_to 'Back', article_path(@article) %>
+</button>
