--- a/app/views/comments/show.html.erb
+++ b/app/views/comments/show.html.erb
@@ -1,13 +1,9 @@
+<br>
 <p id="notice"><%= notice %></p>
 
 <p>
   <strong>Content:</strong>
   <%= @comment.content %>
-</p>
-
-<p>
-  <strong>Created by:</strong>
-  <%= @comment.created_by %>
 </p>
 
 <p>
@@ -20,5 +16,5 @@
   <%= @comment.user_id %>
 </p>
 
-<%= link_to 'Edit', edit_comment_path(@comment) %> |
-<%= link_to 'Back', comments_path %>
+<%= link_to 'Edit', edit_article_comment_path(@comment) %> |
+<%= link_to 'Back', article_comments_path %>
