--- a/app/views/landingpage/_navbar.html.erb
+++ b/app/views/landingpage/_navbar.html.erb
@@ -1,8 +1,10 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+  <div class="container-fluid">
   <a class="navbar-brand" href="#">MediCare</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
+
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
@@ -35,18 +37,22 @@
         <%= link_to("News", news_index_url, :class => "nav-link") %>
       </li>
 
+
     </ul>
     <!-- Display user Email on the NavBar -->
     <% if current_user %>
       <h6 id = "nav-bar-user-email" style="color: white; margin-right: 20px;"> Welcome! <%= current_user.email %> </h6>
     <% end %>
-      <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        <!-- Sign Out button -->
+    <!--
+     <form class="form-inline my-2 my-lg-0">
+       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+       -->
+       <!-- Sign Out button -->
       <li class="nav-item">
-        <%= link_to "Sign out", destroy_user_session_url, :class => 'nav-link',  method: :delete, :class => "btn btn-outline-info" %>
+        <%= link_to "Sign out", destroy_user_session_url, method: :delete, :class => "btn btn-outline-info" %>
       </li>
     </form>
+  </div>
   </div>
 </nav>
