--- a/app/views/patients/new.html.erb
+++ b/app/views/patients/new.html.erb
@@ -1,7 +1,7 @@
-<div class="jumbotron" id="signup_jumbo">
+<div class="jumbotron" id="custom_jumbo">
     <h1>New Patient</h1>
 
     <%= render 'form', patient: @patient %>
 
-    <%= link_to 'Back', patients_path %>
+    <%= link_to 'Back', patients_path ,class: "btn btn-primary btn-m" %>
 </div>
