--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -1,44 +1,21 @@
-<%= form_with(model: profile) do |form| %>
-  <% if profile.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(profile.errors.count, "error") %> prohibited this profile from being saved:</h2>
+<!--  Generated using Simple form gem -->
 
-      <ul>
-        <% profile.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
+<%= simple_form_for(@profile) do |f| %>
+  <%= f.error_notification %>
+  <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
 
-  <div class="field">
-    <%= form.label :firstname %>
-    <%= form.text_field :firstname %>
+  <div class="form-inputs">
+    <%= f.input :firstname, :label => "First Name" %>
+    <%= f.input :lastname , :label => "Last Name" %>
+    <%= f.input :address , :label => "Address" %>
+    <%= f.input :medical_license, :label => "Medical Licence" %>
+    <%= f.input :pps_num, :label => "PPS" %>
   </div>
+  <br>
 
-  <div class="field">
-    <%= form.label :lastname %>
-    <%= form.text_field :lastname %>
-  </div>
-
-  <div class="field">
-    <%= form.label :address %>
-    <%= form.text_field :address %>
-  </div>
-
-  <div class="field">
-    <%= form.label :medical_license %>
-    <%= form.number_field :medical_license %>
-  </div>
-
-  <div class="field">
-    <%= form.label :pps_num %>
-    <%= form.text_field :pps_num %>
-  </div>
-
-
-
-  <div class="actions">
-    <%= form.submit %>
+  <!--  Update Profile Button-->
+  <div style="display: flex; float: left;">
+    <%= f.button :submit , class: "btn btn-success btn-m" %>
   </div>
 <% end %>
+
