--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -1,11 +1,11 @@
-<div class="jumbotron" id="signup_jumbo">
+<div class="jumbotron" id="custom_jumbo">
 
       <p id="notice"><%= notice %></p>
 
       <h1>Profiles</h1>
 
-      <table>
-        <thead>
+      <table class="table table-hover table-bordered border border-dark">
+        <thead class="table-light">
           <tr>
             <th>First name</th>
             <th>Last name</th>
@@ -26,9 +26,9 @@
               <td><%= profile.medical_license %></td>
               <td><%= profile.pps_num %></td>
               <td><%= profile.user_id %></td>
-              <td><%= link_to 'Show', profile %></td>
-              <td><%= link_to 'Edit', edit_profile_path(profile) %></td>
-              <td><%= link_to 'Destroy', profile, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+              <td><%= link_to 'Show', profile, class: "btn btn-outline-success" %></td>
+              <td><%= link_to 'Edit', edit_profile_path(profile), class: "btn btn-outline-info" %></td>
+              <td><%= link_to 'Destroy', profile,  class: "btn btn-outline-danger", method: :delete, data: { confirm: 'Are you sure?' } %></td>
             </tr>
           <% end %>
         </tbody>
@@ -36,5 +36,16 @@
 
       <br>
 
-      <%= link_to 'New Profile', new_profile_path %>
+      <!--= link_to 'New Profile-b', new_profile_path, class:"btn btn-outline-success" %>  -->
+
+  <!--Display a button New Profile only if the Doctor has not created one  %>  -->
+    <% if current_user.profile.id? %>
+        <h3> You can only have one Profile Dr <%= current_user.email %>!</h3>
+
+   <% else %>
+        <%= link_to 'New Profile', new_profile_path, class:"btn btn-outline-success" %>
+
+ <% end %>
+
+
 </div>
