--- a/app/views/profiles/new.html.erb
+++ b/app/views/profiles/new.html.erb
@@ -1,10 +1,10 @@
-<hr class="colorgraph">
-  <div class="jumbotron" id="signup_jumbo">
+<hr class="graphcolor">
+  <div class="jumbotron" id="custom_jumbo">
 
-      <h2 style= "text-align: center">Creating profile <b><%= current_user.email.split('@')[0] %></h2><br>
+      <h2 style= "text-align: center">Creating profile by <b><%= current_user.email.split('@')[0] %></h2><br>
 
       <%= render 'form', profile: @profile %>
-      <%= link_to 'Back', profiles_path %>
+      <%= link_to 'Back', profiles_path ,class: "btn btn-primary btn-m" %>
 
   </div>
-<hr class="colorgraph">
+<hr class="graphcolor">
