--- a/app/assets/stylesheets/bootstrapapply.css.scss
+++ b/app/assets/stylesheets/bootstrapapply.css.scss
@@ -28,6 +28,12 @@
   margin-right: 3em;
 }
 
+#login_jumbo,  #custom_jumbo_patient {
+  margin-top: 7em;
+  margin-left: 0px;
+  margin-right: 0px;
+}
+
 .custom-twitter-jumbo{
 
   padding-right: 0.75rem;
