--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,33 +1,25 @@
 <div class="jumbotron" id="custom_jumbo">
-
     <h1 class="text-center mt-4">Listing all articles</h1>
-
-
-
       <div class="container">
         <!-- Search -->
         <%= form_tag articles_path, :method => 'get' do %>
           <%= text_field_tag :search, params[:search], placeholder: "Search", class: "form-control" %>
-
           <br>
           <%= submit_tag "Search", class: "btn btn-primary" %>
           <%= link_to 'Add New Article', new_article_path(@article),class: "btn btn-outline-success" %>
-
         <% end %>
           <% @articles.each do |article| %>
-
-
             <div class="row justify-content-md-center">
               <div class="col-8 mt-4">
                 <div class="card text-center shadow mb-5 bg-white rounded">
                   <div class="card-header font-italic">
-
                   </div>
                   <div class="card-body">
                     <h5 class="card-title"><%= link_to article.title, article_path(article), class: "text-success" %></h5>
 
                     <p class="card-text"><%= truncate(article.description, length: 100) %></p>
                     <%= link_to "View", article_path(article), class: "btn btn-outline-success" %>
+                    <!-- Allow Edit and Delete of the Article to Article owner and Admin, -->
                     <% if current_user && (article.user == current_user || current_user.admin?) %>
                       <%= link_to "Edit", edit_article_path(article), class: "btn btn-outline-info" %>
                       <%= link_to "Delete", article_path(article), class: "btn btn-outline-danger", method: :delete, data: {confirm: "Are you sure?"} %>
