--- a/app/views/news/index.html.erb
+++ b/app/views/news/index.html.erb
@@ -1,10 +1,8 @@
 <div class="container">
 
   <div class="row">
-    <!-- Rendering the newsApi -->
+    <!-- Rendering the newsApi in News Page-->
     <%= render "api/indexNewsApiIreland" %>
-
-    <!--   render "landingpage/blog_sidebar" %> -->
 
   </div>
 
