--- a/app/views/patients/new.html.erb
+++ b/app/views/patients/new.html.erb
@@ -3,5 +3,5 @@
 
     <%= render 'form', patient: @patient %>
 
-    <%= link_to 'Back', patients_path ,class: "btn btn-primary btn-m" %>
+    <%= link_to 'Back', patients_path ,class: "btn btn-outline-primary" %>
 </div>
