--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -13,18 +13,11 @@
         </ul>
       </div>
     </div>
+    <!--hr Create a line -->
     <hr class="graphcolor">
 
-    <div class="form-actions">
-      <div style="display: flex; float: left;">
-        <%= link_to 'Back', profiles_path, class: "btn btn-dark btn-m" %>
-      </div>
-      <div style="display: flex; float: left;">
-        <%= link_to 'Show', @profile , class: "btn btn-dark btn-m" %>
-      </div>
-    </div>
-
-
+    <%= link_to 'Back', profiles_path, class: "btn btn-outline-primary" %>
+    <%= link_to 'Show', @profile , class: "btn btn-outline-info" %>
 
   </div>
 </div>
