--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -1,9 +1,6 @@
 <div class="jumbotron" id="custom_jumbo">
-
       <p id="notice"><%= notice %></p>
-
       <h1>Profiles</h1>
-
       <table class="table table-hover table-bordered border border-dark">
         <thead class="table-light">
           <tr>
@@ -12,7 +9,6 @@
             <th>Address</th>
             <th>Medical license</th>
             <th>Pps num</th>
-            <th>User</th>
             <th colspan="3"></th>
           </tr>
         </thead>
@@ -25,7 +21,6 @@
               <td><%= profile.address %></td>
               <td><%= profile.medical_license %></td>
               <td><%= profile.pps_num %></td>
-              <td><%= profile.user_id %></td>
               <td><%= link_to 'Show', profile, class: "btn btn-outline-success" %></td>
               <td><%= link_to 'Edit', edit_profile_path(profile), class: "btn btn-outline-info" %></td>
               <td><%= link_to 'Destroy', profile,  class: "btn btn-outline-danger", method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -40,7 +35,7 @@
 
   <!--Display a button New Profile only if the Doctor has not created one  %>  -->
     <% if current_user.profile.id? %>
-        <h3> You can only have one Profile Dr <%= current_user.email %>!</h3>
+        <h3> This are your Profile settings Dr <%= MyDecorator.new(@profile).split_email(current_user.email) %>!</h3>
 
    <% else %>
         <%= link_to 'New Profile', new_profile_path, class:"btn btn-outline-success" %>
