--- a/app/views/appointments/index.html.erb
+++ b/app/views/appointments/index.html.erb
@@ -4,7 +4,7 @@
     <h1>Appointments</h1>
 
     <table  class="table table-hover table-bordered border border-dark">
-      <thead class="table-light">
+      <thead class="table-dark">
         <tr>
           <th>Date</th>
           <th>Comment</th>
@@ -20,7 +20,7 @@
             <td><%= appointment.date %></td>
             <td><%= appointment.comment %></td>
             <td><%= appointment.visited %></td>
-            <td><%= appointment.patient.name.surname %></td>
+            <td><%= appointment.patient.name_surname %></td>
             <td><%= link_to 'Show', appointment, class: "btn btn-outline-success" %> </td>
             <td><%= link_to 'Edit', edit_appointment_path(appointment), class: "btn btn-outline-info" %></td>
             <td><%= link_to 'Destroy', appointment, class: "btn btn-outline-danger", method: :delete, data: { confirm: 'Are you sure?' } %></td>
