--- a/app/views/appointments/new.html.erb
+++ b/app/views/appointments/new.html.erb
@@ -2,7 +2,9 @@
   <h1>New Appointment</h1>
 
     <%= render 'form', appointment: @appointment %>
+     <%= link_to 'Back', appointments_path ,class: "btn btn-outline-primary" %>
 
-      <%= link_to 'Back', appointments_path ,class: "btn btn-primary btn-m" %>
+
 
 </div>
+
