--- a/app/views/comments/show.html.erb
+++ b/app/views/comments/show.html.erb
@@ -1,20 +1,23 @@
-<br>
-<p id="notice"><%= notice %></p>
+<div class="jumbotron" id="custom_jumbo">
 
-<p>
-  <strong>Content:</strong>
-  <%= @comment.content %>
-</p>
+    <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Article:</strong>
-  <%= @comment.article_id %>
-</p>
+    <p>
+      <strong>Content:</strong>
+      <%= @comment.content %>
+    </p>
+<!--
+    <p>
+      <strong>Article:</strong>
+      %= @comment.article_id %>
+    </p>
 
-<p>
-  <strong>User:</strong>
-  <%= @comment.user_id %>
-</p>
+    <p>
+      <strong>User:</strong>
+      %= @comment.user_id %>
+    </p>
+-->
+  <%= link_to "Edit", edit_article_comment_path(@article,@comment), class: "btn btn-outline-info" %>
+  <%= link_to "Back", article_comments_path(@article), class: "btn btn-outline-info" %>
 
-<%= link_to 'Edit', edit_article_comment_path(@comment) %> |
-<%= link_to 'Back', article_comments_path %>
+</div>
