--- a/app/views/landingpage/_alerts.html.erb
+++ b/app/views/landingpage/_alerts.html.erb
@@ -1,4 +1,20 @@
 
 <!-- Devise alerts   -->
-<p class="alert"><%= alert %></p>
-<p class="notice"><%= notice %></p>
+<!--<p class="alert">= alert </p> -->
+<!-- <p class="notice">%= notice </p>  -->
+<br>
+<% if notice %>
+  <div class="notice alert alert-primary" role="alert">
+    <strong><%= notice %></strong>
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+<% elsif alert %>
+  <div class="alert alert-warning" role="alert">
+    <strong><%= alert %></strong>
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+<% end %>
