--- a/app/views/patients/index.html.erb
+++ b/app/views/patients/index.html.erb
@@ -1,34 +1,43 @@
-<div class="jumbotron" id="custom_jumbo">
-    <p id="notice"><%= notice %></p>
+<br>
+<br>
 
-    <h1>Patients</h1>
+<!-- Search -->
+<%#= form_tag patients_path, :method => 'get' do %>
+  <%#= text_field_tag :search, params[:search], placeholder: "Search", class: "form-control" %>
+<!--  <br>-->
+  <%#= submit_tag "Search", class: "btn btn-primary" %>
+<%# end %>
+<div class="jumbotron jumbotron-fluid" id="custom_jumbo">
 
-    <table class="table table-hover table-bordered border border-dark">
-      <thead class="table-light">
+    <div class="container">
+
+      <h1 class="display-4">Patients</h1>
+
+      <table class="table table-hover table-bordered border border-dark">
+        <thead class="table-dark">
         <tr>
           <th>Name</th>
-          <th>Surname</th>
           <th>Gender</th>
-          <th>Date of birth</th>
+          <th>Age</th>
           <th>Address</th>
           <th>Pps</th>
-          <th>Medical card</th>
-          <th>Doctor</th>
+          <th>Medical Card</th>
           <th colspan="3"></th>
         </tr>
-      </thead>
+        </thead>
 
-      <tbody>
+        <tbody>
         <% @patients.each do |patient| %>
           <tr>
-            <td><%= patient.name %></td>
-            <td><%= patient.surname %></td>
+            <td><%= patient.name_surname %></td>
             <td><%= patient.gender %></td>
-            <td><%= patient.date_of_birth %></td>
+            <td><%= patient.age %></td>
             <td><%= patient.address %></td>
             <td><%= patient.pps%></td>
-            <%= MyDecorator.new(@patient.pps).capitalize_pat_pps_num %>
+            <td><%= patient.medical_card %></td>
 
+
+            <!--%= MyDecorator.new(@patient.pps).capitalize_pat_pps_num %-->
             <!-- <td><= patient.medical_card %></td> -->
             <!-- <td><= patient.user_id %></td>  -->
             <td><%= link_to 'Show', patient, class: "btn btn-outline-success" %> </td>
@@ -36,10 +45,13 @@
             <td><%= link_to 'Destroy', patient,  class: "btn btn-outline-danger", method: :delete, data: { confirm: 'Are you sure?' } %></td>
           </tr>
         <% end %>
-      </tbody>
-    </table>
+        </tbody>
+      </table>
 
-    <br>
+      <br>
 
-    <%= link_to 'New Patient', new_patient_path, class:"btn btn-outline-success" %>
+      <%= link_to 'New Patient', new_patient_path, class:"btn btn-outline-success" %>
+
+
+    </div>
 </div>
